--- a/mods.html
+++ b/mods.html
@@ -176,8 +176,8 @@
 		<p>All of these mods are used with the <a href="https://fabricmc.net/" target="_blank">Fabric Mod Loader</a>.</p>
 		<h2>Compatibility Progress</h2>
 		<div class="progress">
-			<div class="updated" style="width:84%"></div>
-			<div class="outdated" style="width:2%"></div>
+			<div class="updated" style="width:21%"></div>
+			<div class="outdated" style="width:65%"></div>
 			<div class="very-outdated" style="width:14%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -200,7 +200,7 @@
 				<p>Required by <a href="#iris">Iris</a>, <a href="#nvidium">NVidium</a>, <a href="#reeses-sodium-options">Reese's Sodium Options</a>, and <a href="#sodium-extra">Sodium Extra</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 		<div class="mod" id="sodium-extra">
@@ -214,7 +214,7 @@
 				<p>Adds some configurations not included in <a href="#sodium">Sodium</a>, such as adjustable cloud height and more advanced particle controls.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="reeses-sodium-options">
@@ -228,7 +228,7 @@
 				<p>Better options menu for both <a href="#sodium">Sodium</a> and <a href="#sodium-extra">Sodium Extra</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="iris">
@@ -242,7 +242,7 @@
 				<p>Implements the OptiFine shader format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 		<div class="mod" id="lambdynamiclights">
@@ -270,7 +270,7 @@
 				<p>More aggressive block face culling.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="zoomify">
@@ -284,7 +284,7 @@
 				<p>Adds a highly-configurable zoom.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="animatica">
@@ -298,7 +298,7 @@
 				<p>Implements the OptiFine animated texture format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="cit-resewn">
@@ -326,7 +326,7 @@
 				<p>Implements the OptiFine connected textures format and adds emissive texture support for blocks and items.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="entity-model-features">
@@ -340,7 +340,7 @@
 				<p>Implements the OptiFine custom entity models and animations format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 		<div class="mod" id="entity-texture-features">
@@ -354,7 +354,7 @@
 				<p>Implements the OptiFine random and emissive mob textures format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 		<div class="mod" id="fabricskyboxes">
@@ -369,7 +369,7 @@
 				<p>Required by <a href="#fabricskyboxes-interop">FabricSkyBoxes Interop</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="fabricskyboxes-interop">
@@ -383,7 +383,7 @@
 				<p>Implements the OptiFine custom skyboxes format within <a href="#fabricskyboxes">FabricSkyBoxes</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="optigui">
@@ -397,7 +397,7 @@
 				<p>Implements the OptiFine custom GUI format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 		<div class="mod" id="vanadium">
@@ -427,7 +427,7 @@
 				<p>A Fabric mod designed to improve the chunk performance of Minecraft.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="distant-horizons">
@@ -441,7 +441,7 @@
 				<p>See farther without turning your game into a slide show.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="dynamic-fps">
@@ -455,7 +455,7 @@
 				<p>Improves performance when Minecraft is in the background.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 		<div class="mod" id="enhanced-block-entities">
@@ -469,7 +469,7 @@
 				<p>Reduces lag by rendering block entities as normal blocks.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="entityculling">
@@ -483,7 +483,7 @@
 				<p>Skips rendering entities that aren't in view.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="ferritecore">
@@ -497,7 +497,7 @@
 				<p>Reduces memory usage.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="immediatelyfast">
@@ -511,7 +511,7 @@
 				<p>Improves immediate mode rendering performance.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 		<div class="mod" id="krypton">
@@ -525,7 +525,7 @@
 				<p>Optimizes networking.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="language-reload">
@@ -539,7 +539,7 @@
 				<p>Makes switching between languages instant.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 		<div class="mod" id="lithium">
@@ -553,7 +553,7 @@
 				<p>Optimizes general game logic to improve tick speed.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="noisium">
@@ -567,7 +567,7 @@
 				<p>Optimises worldgen performance for a better gameplay experience.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="nvidium">
@@ -581,7 +581,7 @@
 				<p>Uses the nvidia rendering engine.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<h2>Bug Fixes</h2>
@@ -597,7 +597,7 @@
 				<p>Fixes bugs.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="memory-leak-fix">
@@ -625,7 +625,7 @@
 				<p>Fixes the stitching on block and item models.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="modern-fix">
@@ -639,7 +639,7 @@
 				<p>Improves performance, reduces memory usage, and fixes many bugs.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="whiteout">
@@ -653,7 +653,7 @@
 				<p>Ports the bugfixes offered by the Paper project to Fabric.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<h2>Graphical and Audio Improvements</h2>
@@ -669,7 +669,7 @@
 				<p>Renders player skins in 3D.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="better-mount-hud">
@@ -683,7 +683,7 @@
 				<p>Shows both horse health and player hunger while mounted to a horse, donkey, or mule.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="drip-sounds">
@@ -725,7 +725,7 @@
 				<p>Adds missing third-persion animations and modifies others to be better representative.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="paginated-advancements">
@@ -739,7 +739,7 @@
 				<p>Overhauls the advancements screen.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="smooth-swapping">
@@ -767,7 +767,7 @@
 				<p>Provides realistic sound attenuation, reverberation, and absorption.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 		<div class="mod" id="tiny-item-animations">
@@ -781,7 +781,7 @@
 				<p>Adds little animations when you pick up or insert items with your mouse.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="wavey-capes">
@@ -795,7 +795,7 @@
 				<p>The cape shouldn't be a static slab.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<h2>Tools</h2>
@@ -811,7 +811,7 @@
 				<p>Allows for taking screenshots of any resolution.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="horse-stats-vanilla">
@@ -867,7 +867,7 @@
 				<p>Provides a menu in which to see and configure all mods which you have installed.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="notes">
@@ -881,7 +881,7 @@
 				<p>Adds a notepad to the game UI.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="shulker-box-tooltip">
@@ -895,7 +895,7 @@
 				<p>See contents of shulker box in inventory.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<h2>Other Quality of Life Improvements</h2>
@@ -911,7 +911,7 @@
 				<p>Makes the debug screen highly configurable and easier to read.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="chat-heads">
@@ -925,7 +925,7 @@
 				<p>See who you're chatting with!</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 		<div class="mod" id="dont-clear-chat-history">
@@ -939,7 +939,7 @@
 				<p>Doesn't clear the messages sent/received when disconnecting and/or relogging from a server or singleplayer.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="no-fade">
@@ -953,7 +953,7 @@
 				<p>Removes all fade-out animations.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="morechathistory">
@@ -967,7 +967,7 @@
 				<p>Increases the maximum length of the chat history.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 		<div class="mod" id="no-chat-reports">
@@ -981,7 +981,7 @@
 				<p>Strips the cryptographic signature from chat messages so you can't be reported.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 		<h2>Dependencies</h2>
@@ -997,7 +997,7 @@
 				<p>Required when using <a href="#dynamic-fps">Dynamic FPS</a>, <a href="#paginated-advancements">Paginated Advancements</a>, <a href="#sound-physics-remastered">Sound Physics Remastered</a>, and/or <a href="more-culling">More Culling</a> together with <a href="#mod-menu">Mod Menu</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="fabric-api">
@@ -1011,7 +1011,7 @@
 				<p>Required by <a href="#enhanced-block-entities">Enhanced Block Entities</a>, <a href="#fabricskyboxes">FabricSkyBoxes</a>, <a href="#horse-stats-vanilla">Horse Stats Vanilla</a>, <a href="#indium">Indium</a>, <a href="#mod-menu">Mod Menu</a>, <a href="#no-chat-reports">No Chat Reports</a>, <a href="#optigui">OptiGUI</a>, <a href="#shulker-box-tooltip">Shulker Box Tooltip</a>, <a href="#smooth-swapping">Smooth Swapping</a>, and <a href="#vanadium">Vanadium</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="fabric-language-kotlin">
@@ -1025,7 +1025,7 @@
 				<p>Required by <a href="#optigui">OptiGUI</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 		<div class="mod" id="indium">
@@ -1039,7 +1039,7 @@
 				<p>Required when using <a href="#continuity">Continuity</a>, <a href="#enhanced-block-entities">Enhanced Block Entities</a>, and/or <a href="#vanadium">Vanadium</a> together with <a href="#sodium">Sodium</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="malilib">
@@ -1053,7 +1053,7 @@
 				<p>Required by <a href="#litematica">Litematica</a> and <a href="#minihud">MiniHUD</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="yetanotherconfiglib">
@@ -1067,7 +1067,7 @@
 				<p>Required by <a href="#debugify">Debugify</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21</span>
+				<span class="outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 	</body>
