--- a/mods.html
+++ b/mods.html
@@ -200,17 +200,17 @@
 		<div class="progress">
 			<!--
 				total mods:          70    100.00%
-				updated:             51     72.86%
+				updated:             54     77.14%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            18     25.71%
+				outdated:            15     21.43%
 				abandoned:           1       1.43%
 			-->
-			<div class="updated" style="width:73%"></div>
+			<div class="updated" style="width:77%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:26%"></div>
-			<div class="abandoned" style="width:1%"></div>
+			<div class="outdated" style="width:21.5%"></div>
+			<div class="abandoned" style="width:1.5%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -817,7 +817,7 @@
 				<p>Adds and enhances sound effects throughout out the world, UI, and chat.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.5</span>
+				<span class="updated"><span class="circle"></span> 1.21.6</span>
 			</div>
 		</div>
 		<div class="mod" id="status-effect-bars">
@@ -989,7 +989,7 @@
 				<p>Hide only the HUD using F1.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.5</span>
+				<span class="updated"><span class="circle"></span> 1.21.6</span>
 			</div>
 		</div>
 		<div class="mod" id="betterf3">
@@ -1173,7 +1173,7 @@
 				<p>Required by <a href="#sounds">Sounds</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.5</span>
+				<span class="updated"><span class="circle"></span> 1.21.6</span>
 			</div>
 		</div>
 		<div class="mod" id="owo">
