--- a/mods.html
+++ b/mods.html
@@ -199,18 +199,18 @@
 		<h2>Compatibility Progress</h2>
 		<div class="progress">
 			<!--
-				total mods:          70    100.00%
-				updated:             54     77.14%
+				total mods:          69    100.00%
+				updated:             54     78.26%
 				kind-of updated:     0       0.00%
 				kind-of outdated:    0       0.00%
-				outdated:            15     21.43%
+				outdated:            14     20.29%
 				abandoned:           1       1.43%
 			-->
-			<div class="updated" style="width:77%"></div>
+			<div class="updated" style="width:78%"></div>
 			<div class="kindof-updated" style="width:0%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:21.5%"></div>
-			<div class="abandoned" style="width:1.5%"></div>
+			<div class="outdated" style="width:20%"></div>
+			<div class="abandoned" style="width:2%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -1034,6 +1034,20 @@
 				<span class="updated"><span class="circle"></span> 1.21.6</span>
 			</div>
 		</div>
+		<div class="mod" id="chat-patches">
+			<div class="mod-icon">
+				<img src="https://cdn.modrinth.com/data/MOqt4Z5n/56c954dea290ef4dd1b0d6ea92a811acac62ca85.png" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://modrinth.com/mod/chatpatches" target="_blank">Chat Patches</a>
+				</h3>
+				<p>Touches up a few aspects of the mundane chat.</p>
+			</div>
+			<div class="mod-version">
+				<span class="updated"><span class="circle"></span> 1.21.6</span>
+			</div>
+		</div>
 		<div class="mod" id="cherished-worlds">
 			<div class="mod-icon">
 				<img src="https://cdn.modrinth.com/data/3azQ6p0W/14d3a7430f4e834fc0a86d228c6e17e5b9b33a0a.png" />
@@ -1048,20 +1062,6 @@
 				<span class="updated"><span class="circle"></span> 1.21.6</span>
 			</div>
 		</div>
-		<div class="mod" id="dont-clear-chat-history">
-			<div class="mod-icon">
-				<img src="https://media.forgecdn.net/avatars/thumbnails/296/53/64/64/637339129152871550.png" />
-			</div>
-			<div class="mod-description">
-				<h3>
-					<a href="https://modrinth.com/mod/dcch" target="_blank">Don't Clear Chat History</a>
-				</h3>
-				<p>Doesn't clear the messages sent/received when disconnecting and/or relogging from a server or singleplayer.</p>
-			</div>
-			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.4</span>
-			</div>
-		</div>
 		<div class="mod" id="no-fade">
 			<div class="mod-icon">
 				<img src="https://cdn-raw.modrinth.com/data/ncKjyGm3/4152b3215b7695a3e12ef1b06e47cf9aa2edf8b0.png" />
@@ -1071,20 +1071,6 @@
 					<a href="https://modrinth.com/mod/fadeless" target="_blank">Fadeless</a>
 				</h3>
 				<p>Removes all fade-out animations.</p>
-			</div>
-			<div class="mod-version">
-				<span class="updated"><span class="circle"></span> 1.21.6</span>
-			</div>
-		</div>
-		<div class="mod" id="morechathistory">
-			<div class="mod-icon">
-				<img src="https://cdn-raw.modrinth.com/data/8qkXwOnk/icon.png" />
-			</div>
-			<div class="mod-description">
-				<h3>
-					<a href="https://modrinth.com/mod/morechathistory" target="_blank">MoreChatHistory</a>
-				</h3>
-				<p>Increases the maximum length of the chat history.</p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.21.6</span>
@@ -1212,7 +1198,7 @@
 				<h3>
 					<a href="https://modrinth.com/mod/yacl" target="_blank">YetAnotherConfigLib</a>
 				</h3>
-				<p>Required by <a href="#debugify">Debugify</a>, <a href="#sounds">Sounds</a>, and <a href="#zoomify">Zoomify</a>.</p>
+				<p>Required by <a href="@chat-patches">Chat Patches</a>, <a href="#debugify">Debugify</a>, <a href="#sounds">Sounds</a>, and <a href="#zoomify">Zoomify</a>.</p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.21.6</span>
