--- a/mods.html
+++ b/mods.html
@@ -200,17 +200,17 @@
 		<div class="progress">
 			<!--
 				total mods:          69    100.00%
-				updated:             33     47.83%
+				updated:             34     49.28%
 				kind-of updated:     19     27.54%
-				kind-of outdated:    2       2.90%
+				kind-of outdated:    1       1.45%
 				outdated:            14     20.29%
 				abandoned:           1       1.45%
 			-->
-			<div class="updated" style="width:48%"></div>
+			<div class="updated" style="width:49%"></div>
 			<div class="kindof-updated" style="width:28%"></div>
-			<div class="kindof-outdated" style="width:3%"></div>
+			<div class="kindof-outdated" style="width:1.5%"></div>
 			<div class="outdated" style="width:20%"></div>
-			<div class="abandoned" style="width:1%"></div>
+			<div class="abandoned" style="width:1.5%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -1045,7 +1045,7 @@
 				<p>Touches up a few aspects of the mundane chat.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-outdated"><span class="circle"></span> 1.21.6</span>
+				<span class="updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="cherished-worlds">
