--- a/mods.html
+++ b/mods.html
@@ -200,16 +200,16 @@
 		<div class="progress">
 			<!--
 				total mods:          69    100.00%
-				updated:             40     57.97%
-				kind-of updated:     14     20.29%
+				updated:             51     73.91%
+				kind-of updated:     5       7.25%
 				kind-of outdated:    1       1.45%
-				outdated:            13     18.84%
+				outdated:            11     15.94%
 				abandoned:           1       1.45%
 			-->
-			<div class="updated" style="width:58%"></div>
-			<div class="kindof-updated" style="width:20%"></div>
+			<div class="updated" style="width:74%"></div>
+			<div class="kindof-updated" style="width:7%"></div>
 			<div class="kindof-outdated" style="width:1.5%"></div>
-			<div class="outdated" style="width:19%"></div>
+			<div class="outdated" style="width:16%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -346,7 +346,7 @@
 				<p>Implements the OptiFine connected textures format and adds emissive texture support for blocks and items.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.5</span>
+				<span class="updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="entity-model-features">
@@ -417,7 +417,7 @@
 				<p>Implements the OptiFine custom GUI format.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.6</span>
+				<span class="updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="polytone">
@@ -489,7 +489,7 @@
 				<p>Skips rendering entities that aren't in view.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.6</span>
+				<span class="updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="fast-ip-ping">
@@ -517,7 +517,7 @@
 				<p>Reduces memory usage.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.6</span>
+				<span class="updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="immediatelyfast">
@@ -545,7 +545,7 @@
 				<p>Optimizes networking.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.6</span>
+				<span class="updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="language-reload">
@@ -602,7 +602,7 @@
 				<p><i>(<a href="https://modrinth.com/mod/nvidium" target="_blank">Original</a> appears abandoned.)</i></p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.6</span>
+				<span class="updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<h2>Bug Fixes</h2>
@@ -676,7 +676,7 @@
 				<p>Renders player skins in 3D.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.6</span>
+				<span class="updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="better-mount-hud">
@@ -732,7 +732,7 @@
 				<p>Adds missing third-persion animations and modifies others to be better representative.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.6</span>
+				<span class="updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="paginated-advancements">
@@ -873,7 +873,7 @@
 				<p>The cape shouldn't be a static slab.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.6</span>
+				<span class="updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<h2>Tools</h2>
@@ -1059,7 +1059,7 @@
 				<p>Favorite certain worlds, which will always be at the top of the list.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.6</span>
+				<span class="updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="no-fade">
@@ -1073,7 +1073,7 @@
 				<p>Removes all fade-out animations.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.6</span>
+				<span class="updated"><span class="circle"></span> 1.21.7</span>
 			</div>
 		</div>
 		<div class="mod" id="no-chat-reports">
