--- a/mods.html
+++ b/mods.html
@@ -201,14 +201,14 @@
 		<div class="progress">
 			<!--
 				total mods:          75    100.00%
-				updated:             45     60.00%
-				kind-of updated:     9      12.00%
+				updated:             48     64.00%
+				kind-of updated:     6       8.00%
 				kind-of outdated:    0       0.00%
 				outdated:            20     26.67%
 				abandoned:           1       1.33%
 			-->
-			<div class="updated" style="width:60%"></div>
-			<div class="kindof-updated" style="width:12%"></div>
+			<div class="updated" style="width:64%"></div>
+			<div class="kindof-updated" style="width:8%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
 			<div class="outdated" style="width:26.5%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
@@ -1032,7 +1032,7 @@
 				<p>Improves the statistics screen.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.9</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="chat-heads">
@@ -1160,7 +1160,7 @@
 				<p>Required by <a href="#better-statistics-screen">Better Statistics Screen</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.9</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="cloth-config-api">
@@ -1272,7 +1272,7 @@
 				<p>Required by <a href="#better-statistics-screen">Better Statistics Screen</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.9</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="yetanotherconfiglib">
