--- a/mods.html
+++ b/mods.html
@@ -201,16 +201,16 @@
 		<div class="progress">
 			<!--
 				total mods:          75    100.00%
-				updated:             49     65.33%
+				updated:             50     66.67%
 				kind-of updated:     5       6.67%
 				kind-of outdated:    0       0.00%
-				outdated:            20     26.67%
+				outdated:            19     25.33%
 				abandoned:           1       1.33%
 			-->
-			<div class="updated" style="width:65.5%"></div>
+			<div class="updated" style="width:67%"></div>
 			<div class="kindof-updated" style="width:6.5%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:26.5%"></div>
+			<div class="outdated" style="width:25%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -798,13 +798,12 @@
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://github.com/Riflusso/Smooth-Swapping/releases" target="_blank">Smooth Swapping</a>
+					<a href="https://modrinth.com/mod/smooth-swapping" target="_blank">Smooth Swapping</a>
 				</h3>
 				<p>Adds a smooth animation when moving items between containers.</p>
-				<p><i>(<a href="https://modrinth.com/mod/smooth-swapping" target="_blank">Original</a> appears abandoned.)</i></p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.8</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="sound-physics-remastered">
