--- a/mods.html
+++ b/mods.html
@@ -201,16 +201,16 @@
 		<div class="progress">
 			<!--
 				total mods:          75    100.00%
-				updated:             50     66.67%
+				updated:             51     68.00%
 				kind-of updated:     5       6.67%
 				kind-of outdated:    0       0.00%
-				outdated:            19     25.33%
+				outdated:            18     24.00%
 				abandoned:           1       1.33%
 			-->
-			<div class="updated" style="width:67%"></div>
+			<div class="updated" style="width:68%"></div>
 			<div class="kindof-updated" style="width:6.5%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
-			<div class="outdated" style="width:25%"></div>
+			<div class="outdated" style="width:24%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -389,7 +389,7 @@
 				<p><i>(<a href="https://modrinth.com/mod/nvidium" target="_blank">Original</a> appears abandoned.)</i></p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.8</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="particle-core">
