--- a/mods.html
+++ b/mods.html
@@ -201,14 +201,14 @@
 		<div class="progress">
 			<!--
 				total mods:          75    100.00%
-				updated:             51     68.00%
-				kind-of updated:     5       6.67%
+				updated:             52     69.33%
+				kind-of updated:     4       5.33%
 				kind-of outdated:    0       0.00%
 				outdated:            18     24.00%
 				abandoned:           1       1.33%
 			-->
-			<div class="updated" style="width:68%"></div>
-			<div class="kindof-updated" style="width:6.5%"></div>
+			<div class="updated" style="width:69.5%"></div>
+			<div class="kindof-updated" style="width:5%"></div>
 			<div class="kindof-outdated" style="width:0%"></div>
 			<div class="outdated" style="width:24%"></div>
 			<div class="abandoned" style="width:1.5%"></div>
@@ -290,7 +290,7 @@
 				<p>Reduces memory usage.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21.9</span>
+				<span class="updated"><span class="circle"></span> 1.21.10</span>
 			</div>
 		</div>
 		<div class="mod" id="immediatelyfast">
